removed vertex.query(). bam.